--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@tailwindcss/typography": "^0.5.9",
 		"cloudinary": "^1.40.0",
 		"dayjs": "^1.11.9",
+		"dialog-polyfill": "^0.5.6",
 		"p5": "^1.6.0",
 		"svelte-carousel": "^1.0.25",
 		"three": "^0.152.0",
